--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,9 @@ Global Styles
 ===============
 */
 
-*, ::before, ::after {
+*,
+::before,
+::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -147,36 +149,34 @@ p {
   background: var(--clr-primary-8);
 }
 
-.section{
+.section {
   padding: 5rem 0;
 }
 
-.section-title{
+.section-title {
   text-align: center;
   margin-bottom: 4rem;
 }
 
-.section-title h2{
+.section-title h2 {
   text-transform: uppercase;
 }
 
-.section-title span{
+.section-title span {
   color: var(--clr-primary-5);
 }
 
-.section-center{
+.section-center {
   width: 90vw;
   margin: 0 auto;
   max-width: 1170px;
 }
 
-@media screen and (min-width: 992px){
-  .section-center{
+@media screen and (min-width: 992px) {
+  .section-center {
     width: 95vw;
   }
 }
-
-
 
 /*
 =============== 
@@ -188,26 +188,25 @@ Navbar
 Hero
 ===============
 */
-.hero{
+.hero {
   min-height: 100vh;
   background: var(--clr-primary-5);
-    display: flex;
-    justify-content: center;
-    align-items: center; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.hero-banner{
+.hero-banner {
   text-align: center;
   color: var(--clr-white);
   padding: 0 3rem;
 }
 
-.hero-banner h1{
+.hero-banner h1 {
   text-transform: uppercase;
-
 }
 
-.hero-banner p{
+.hero-banner p {
   max-width: 35rem;
   margin-left: auto;
   margin-right: auto;
@@ -215,31 +214,31 @@ Hero
   letter-spacing: var(--spacing);
 }
 
-.hero-btn{
+.hero-btn {
   padding: 0.9rem 1.6rem;
   font-size: 1.25rem;
   background: var(--clr-white);
   color: var(--clr-primary-5);
 }
 
-.hero-btn:hover{
+.hero-btn:hover {
   background: transparent;
   color: var(--clr-white);
   border-color: var(--clr-white);
   font-size: 1rem;
 }
 
-@media screen and (min-width:768px ){
-  .hero{
-    background: linear-gradient(rgba(44, 174,186,.6), rgba(0,0,0,0.7)), url('../images/main.jpeg') center/cover no-repeat;
+@media screen and (min-width: 768px) {
+  .hero {
+    background: linear-gradient(rgba(44, 174, 186, 0.6), rgba(0, 0, 0, 0.7)),
+      url("../images/main.jpeg") center/cover no-repeat;
   }
 
-  .hero-banner{
+  .hero-banner {
     padding: 0;
-
   }
 
-  .hero-banner p{
+  .hero-banner p {
     max-width: 45rem;
   }
 }
@@ -251,30 +250,30 @@ About
 /* section add to globals */
 /* title add to globals */
 /* section center add to globals */
-.about-img-container, .about-info{
+.about-img-container,
+.about-info {
   margin-bottom: 2rem;
 }
 @media screen and (min-width: 992px) {
-  .about-center{
+  .about-center {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
   }
-  .about-img-container,.about-info{
+  .about-img-container,
+  .about-info {
     flex: 0 0 calc(50% - 2rem);
     margin-bottom: 0;
     align-self: center;
   }
-
 }
 
 @media screen and (min-width: 1170px) {
-  .about-img-container{
+  .about-img-container {
     position: relative;
-    
   }
-  .about-img-container::before{
-    content: '';
+  .about-img-container::before {
+    content: "";
     position: absolute;
     border: 0.5rem solid var(--clr-primary-5);
     width: 100%;
@@ -286,15 +285,72 @@ About
   }
 }
 
-
-
-
-
 /*
 =============== 
 Services
 ===============
 */
+
+.services{
+  background: var(--clr-grey-10);
+}
+
+.service{
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
+.service-icon{
+  background-color: var(--clr-primary-5);
+  color: var(--clr-primary-1);
+  padding: .5rem;
+  display: inline-block;
+  font-size: 2rem;
+  margin-bottom: 1.5rem;
+}
+
+.service-text{
+  max-width: 20rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media screen and (min-width: 576px){
+  .services-center{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .service{
+    flex: 0 0 calc(50% - 1rem);
+    margin-bottom: 1rem;
+  }
+}
+
+@media screen and (min-width: 992px){
+ 
+  .service{
+    flex: 0 0 calc(33.33% - 1rem);
+  }
+}
+
+@media screen and (min-width: 1170px){
+ 
+  .service{
+    display: flex;
+    text-align: left;
+  }
+  .service-icon{
+    align-self:  start;
+  }
+
+  .service-info{
+    padding-left: 1rem;
+  }
+  .service-title{
+    margin-bottom: 0.5rem;
+  }
+}
 
 /*
 =============== 
